# mkarchiso

./: .gitignore  Makefile  Makefile.am  config.mk  config.mk.in  config.status  configure  configure.ac
custom_data/home_root/: ddbc
mklists/: vars.mk
mklists/mkdefs/: mount_img.mk  mount_iso.mk  mount_point.mk  rm.mk  sudo.mk
mklists/mkdistros/: archlinux.mk
scripts/: after-chroot.sh
scripts/archlinux/: install-update.sh
src/: main.cc
